--- a/packages/vm/Cargo.toml
+++ b/packages/vm/Cargo.toml
@@ -48,8 +48,8 @@ serde = { version = "1.0.103", default-features = false, features = ["derive", "
 serde_json = "1.0.40"
 sha2 = "0.10.3"
 thiserror = "1.0.26"
-wasmer = { version = "=4.1.0", default-features = false, features = ["cranelift", "singlepass"] }
-wasmer-middlewares = "=4.1.0"
+wasmer = { git = "https://github.com/oraichain/wasmer.git", version = "=4.1.0", default-features = false, features = ["cranelift", "singlepass"] }
+wasmer-middlewares = { git = "https://github.com/oraichain/wasmer.git" }
 
 # Dependencies that we do not use ourself. We add those entries
 # to bump the min version of them.
@@ -77,3 +77,5 @@ target-lexicon = "0.12"
 [[bench]]
 name = "main"
 harness = false
+
+
