--- a/packages/vm/Cargo.toml
+++ b/packages/vm/Cargo.toml
@@ -51,11 +51,8 @@ serde = { version = "1.0.103", default-features = false, features = [
 serde_json = "1.0.40"
 sha2 = "0.10.3"
 thiserror = "1.0.26"
-wasmer = { git = "https://github.com/oraichain/wasmer.git", rev = "56fb4ae", default-features = false, features = [
-    "cranelift",
-    "singlepass",
-] }
-wasmer-middlewares = { git = "https://github.com/oraichain/wasmer.git", rev = "56fb4ae" }
+wasmer = { version = "=4.2.2", default-features = false, features = ["cranelift", "singlepass"] }
+wasmer-middlewares = "=4.2.2"
 
 # Dependencies that we do not use ourself. We add those entries
 # to bump the min version of them.
